--- a/todo-list/src/index.css
+++ b/todo-list/src/index.css
@@ -4,8 +4,6 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -14,56 +12,99 @@
   -webkit-text-size-adjust: 100%;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+.container {
+  width: 50%;
+  margin: 0 auto;
 }
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+#header-div {
+  /* border: 2px solid red; */
+  height: 20vh;
+  background-color: rgb(229, 228, 228);
+  border-top-right-radius: 5%;
+  border-top-left-radius: 5%;
 }
 
 h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+  margin: 15px auto;
+  font-size: 4rem;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+#list-div {
+  /* border: 2px solid blue; */
+  height: 50vh;
+  font-size: 2rem;
+  overflow: auto;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
+#form-div {
+  /* border: 2px solid green; */
+  height: 20vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 2rem;
+  background-color: rgb(229, 228, 228);
+  border-bottom-right-radius: 5%;
+  border-bottom-left-radius: 5%;
+}
+
+form {
+  display: flex;
+  gap: 10px;
+  justify-content: center;
+}
+
+#taskinput {
+  width: 50%;
+  font-size: 2rem;
+  padding: 5px;
+}
+
+#add-btn {
+  font-size: 2rem;
+  width: 50px;
+  background-color: rgb(126, 204, 126);
+}
+
+.grid-list {
+  display: grid;
+  grid-template-columns: 3fr 1fr 1fr;
+  text-align: left;
+  margin: 0 20px;
+  list-style-type: disc;
+}
+
+.grid-list:hover {
+  background-color: rgb(197, 194, 215);
+}
+
+.delete-btn {
+  width: 80%;
+  height: 80%;
+  margin: auto;
+  color: red;
+  font-weight: bold;
+  font-size: 1.5rem;
+}
+
+.check-button {
+  width: 80%;
+  height: 80%;
+  margin: auto;
+}
+
+.task-item {
+  margin: 5px;
+}
+
+.done {
+  text-decoration: line-through;
+
+}
+
+@media only screen and (max-width: 760px) {
+  h1 {
+    font-size: 2.5rem;
   }
 }
