--- a/todo-list/src/index.css
+++ b/todo-list/src/index.css
@@ -107,4 +107,40 @@ form {
   h1 {
     font-size: 2.5rem;
   }
+
+
+  .container {
+    width: 90vw;
+    margin: 0 auto;
+  }
+  #form-div {
+    /* border: 2px solid green; */
+    height: 20vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 2rem;
+    background-color: rgb(229, 228, 228);
+    border-bottom-right-radius: 5%;
+    border-bottom-left-radius: 5%;
+  }
+  form {
+    display: flex;
+    flex-direction:column;
+    gap: 10px;
+    align-items: center;
+  }
+
+  #taskinput {
+    width: 50%;
+    font-size: 2rem;
+    padding: 5px;
+  }
+
+  #list-div {
+    /* border: 2px solid blue; */
+    height: 50vh;
+    font-size: 1.2rem;
+    overflow: auto;
+  }
 }
